--- a/IIFYM/src/main/res/layout/activity_create_food.xml
+++ b/IIFYM/src/main/res/layout/activity_create_food.xml
@@ -188,6 +188,30 @@
 
             </info.hoang8f.android.segmented.SegmentedGroup>
 
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:text="Add to daily log?"
+                android:textColor="@color/colorPrimary" />
+
+            <CheckBox
+                android:id="@+id/cbIsDaily"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="bottom"
+                android:layout_weight="1"
+                android:textAllCaps="false"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:textColor="@color/colorPrimary" />
+
         </LinearLayout>
 
         <LinearLayout
@@ -212,6 +236,13 @@
                 android:id="@+id/spinnerUnit"
                 android:gravity="center_vertical|center"
                 android:layout_weight="1" />
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="horizontal">
+
         </LinearLayout>
 
 
