--- a/IIFYM/src/main/res/layout/fragment_goals.xml
+++ b/IIFYM/src/main/res/layout/fragment_goals.xml
@@ -13,7 +13,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -299,13 +300,6 @@
                         android:layout_gravity="center_vertical|center_horizontal|center"
                         android:gravity="center_vertical|center_horizontal|center">
 
-                        <ImageButton
-                            android:id="@+id/btnSave"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:background="@color/Transparent"
-                            android:backgroundTint="@color/Transparent"
-                            app:srcCompat="@drawable/ic_floppy_save" />
                     </RelativeLayout>
 
                 </LinearLayout>
