--- a/IIFYM/src/main/res/layout/fragment_preferences.xml
+++ b/IIFYM/src/main/res/layout/fragment_preferences.xml
@@ -8,6 +8,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
         android:gravity="center_horizontal"
         android:text="@string/lblComingSoon" />
 
