--- a/IIFYM/src/main/res/layout/fragment_profile.xml
+++ b/IIFYM/src/main/res/layout/fragment_profile.xml
@@ -12,7 +12,8 @@
 
     <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_marginTop="@dimen/activity_vertical_margin">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -339,13 +340,6 @@
                 android:layout_weight="1"
                 android:orientation="horizontal">
 
-                <Button
-                    android:id="@+id/btnSave"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="1"
-                    android:background="@drawable/btn_iifym_style"
-                    android:text="Save" />
             </LinearLayout>
 
         </LinearLayout>
