--- a/IIFYM/src/main/res/layout/list_item.xml
+++ b/IIFYM/src/main/res/layout/list_item.xml
@@ -4,13 +4,17 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
     android:layout_marginTop="1dp"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:paddingLeft="10dp"
+    android:paddingRight="10dp">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
         android:orientation="horizontal"
+        android:paddingBottom="1dp"
+        android:paddingTop="3dp"
         android:weightSum="1">
 
         <TextView
@@ -21,18 +25,7 @@
             android:text="Name"
             android:textAppearance="?android:attr/textAppearanceMedium"
             android:textColor="@color/colorPrimary"
-            android:textSize="14sp" />
-
-        <TextView
-            android:id="@+id/lblPortionDetails"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_weight="1"
-            android:text="00.0 Servings"
-            android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="@color/colorPrimary"
-            android:textSize="14sp" />
+            android:textSize="17sp" />
 
     </LinearLayout>
 
@@ -40,7 +33,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="1dp"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:weightSum="1">
 
         <TextView
             android:id="@+id/lblBrand"
@@ -48,8 +42,36 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Brand"
-            android:textColor="@color/colorPrimary" />
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp" />
 
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/lblCalories"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Calories"
+            android:textColor="@color/CaloriesProgessColor"
+            android:textSize="15sp" />
+
+        <TextView
+            android:id="@+id/lblPortionDetails"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentRight="true"
+            android:layout_weight="1"
+            android:text="0.0 Servings"
+            android:textAlignment="textEnd"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="@color/colorPrimary"
+            android:textSize="15sp" />
     </LinearLayout>
 
     <LinearLayout
@@ -60,23 +82,15 @@
         android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/lblCalories"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:text="Calories"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="14sp" />
-
-        <TextView
             android:id="@+id/lblCarbs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Carbs"
+            android:textAlignment="textStart"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="14sp" />
+            android:textColor="@color/CarbProgressColor"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/lblProtein"
@@ -84,9 +98,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Protein"
+            android:textAlignment="center"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="14sp" />
+            android:textColor="@color/ProteinProgessColor"
+            android:textSize="15sp" />
 
         <TextView
             android:id="@+id/lblFat"
@@ -94,9 +109,10 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:text="Fat"
+            android:textAlignment="textEnd"
             android:textAppearance="?android:attr/textAppearanceMedium"
-            android:textColor="?attr/colorPrimary"
-            android:textSize="14sp" />
+            android:textColor="@color/FatProgessColor"
+            android:textSize="15sp" />
 
     </LinearLayout>
 </LinearLayout>
