Removed old functionality from SelectMealIngredients, activityCreateFood, activityCreateMeal which involved passing isDaily by intent Replaced old isDaily functionality by adding checkbox to activityCreateMeal and activityCreateFood for user to select isDaily Added etxtDate in order to allow user to select date to add meal to, default is today Added date parameter to createDailyItem method in SQLiteConnector

--- a/IIFYM/src/main/res/layout/activity_create_meal.xml
+++ b/IIFYM/src/main/res/layout/activity_create_meal.xml
@@ -245,6 +245,49 @@
 
             </LinearLayout>
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+                <CheckBox
+                    android:id="@+id/cbIsDaily"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:textAllCaps="false"
+                    android:textAppearance="@android:style/TextAppearance.Material.Small"
+                    android:textColor="@color/colorPrimary" />
+
+                <TextView
+                    android:id="@+id/textView7"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center_vertical"
+                    android:text="Add to daily log?"
+                    android:textColor="@color/colorPrimary" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" />
+
+                <EditText
+                    android:layout_height="50dp"
+                    android:inputType="textPersonName"
+                    android:text="@string/dateInitial"
+                    android:ems="3"
+                    android:id="@+id/etxtDate"
+                    android:textColor="?attr/colorPrimary"
+                    android:textSize="14sp"
+                    android:gravity="right|center_vertical"
+                    android:layout_gravity="right|center_vertical"
+                    android:drawableRight="@drawable/drawable_ic_calendar"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentEnd="true"
+                    android:layout_width="110dp"
+                    android:focusable="false"/>
+
+            </LinearLayout>
+
         </LinearLayout>
     </ScrollView>
 
