--- a/IIFYM/src/main/res/layout/activity_create_food.xml
+++ b/IIFYM/src/main/res/layout/activity_create_food.xml
@@ -188,30 +188,6 @@
 
             </info.hoang8f.android.segmented.SegmentedGroup>
 
-            <Space
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_weight="1" />
-
-            <TextView
-                android:id="@+id/textView7"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:text="Add to daily log?"
-                android:textColor="@color/colorPrimary" />
-
-            <CheckBox
-                android:id="@+id/cbIsDaily"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="bottom"
-                android:layout_weight="1"
-                android:textAllCaps="false"
-                android:textAppearance="@android:style/TextAppearance.Material.Small"
-                android:textColor="@color/colorPrimary" />
-
         </LinearLayout>
 
         <LinearLayout
@@ -236,14 +212,59 @@
                 android:id="@+id/spinnerUnit"
                 android:gravity="center_vertical|center"
                 android:layout_weight="1" />
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <CheckBox
+                android:id="@+id/cbIsDaily"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:textAllCaps="false"
+                android:textAppearance="@android:style/TextAppearance.Material.Small"
+                android:textColor="@color/colorPrimary" />
+
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
+                android:layout_weight="1"
+                android:text="Add to daily log?"
+                android:textColor="@color/colorPrimary" />
+
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content" />
+
+            <EditText
+                android:layout_height="50dp"
+                android:inputType="textPersonName"
+                android:text="@string/dateInitial"
+                android:ems="3"
+                android:id="@+id/etxtDate"
+                android:textColor="?attr/colorPrimary"
+                android:textSize="14sp"
+                android:gravity="right|center_vertical"
+                android:layout_gravity="right|center_vertical"
+                android:drawableRight="@drawable/drawable_ic_calendar"
+                android:layout_alignParentTop="true"
+                android:layout_alignParentEnd="true"
+                android:layout_width="110dp"
+                android:focusable="false"/>
+
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-        </LinearLayout>
+            android:orientation="horizontal"></LinearLayout>
 
 
     </LinearLayout>
